test/tests/snapshots/compiler_output__compiled_main_return@main_return.min.snap
---
source: test/tests/compiler_output.rs
assertion_line: 22
expression: "pub fn main() -> int {\n    1\n}\n"
input_file: test/tests/samples/main_return.min

---

(module
  ;; imports
  (import "base" "print_num" (func $0  (param i64)))
  (import "base" "itoa" (func $1  (param i64) (result i64)))
  ;; funcref table
  (table 3 funcref)
  (elem (i32.const 0) $0 $1 $main)
  ;; function declarations
  
  (func $main  (result i64)
    i64.const 1
  )(export "main" (func $main))

)

